# wicare

./: ..gitignore.un~  .gitignore  Pipfile  README.md  createFakeData.py  index.html  manage.py  pyproject.toml  requirements.txt
accounts/: README.md  tests.py  urls.py  views.py
api/: README.md  admin.py  choices.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
destitutes/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
destitutes/migrations/: 0001_initial.py  0002_alter_destitutes_familyname.py
donations/: models.py  serializers.py  tests.py  urls.py  views.py
donations/migrations/: 0001_initial.py  0002_alter_donations_sponsor.py
frontend/: README.md  package.json
frontend/wicare/: README.md  index.html  package-lock.json  package.json
frontend/wicare-frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
frontend/wicare-frontend/cypress/support/: component.ts
static/css/: dashboard.css  form.css  style.css  thankyou.css
static/js/: api.js  auth.js  script.js
subscribers/: models.py  serializers.py  tests.py  urls.py  views.py
subscribers/migrations/: 0001_initial.py  0002_remove_subscribers_highlighted_and_more.py
templates/: about.html  add_donee.html  checkout.html  donate.html  donees.html  donors.html  gallery.html  impact_areas.html  learn_more.html  thankyou.html  user_profile.html
templates/auth/: login.html  register.html
templates/user/: dashboard.html
wicare/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
