[tool.poetry]
name = "repl_nix_wicare"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
django-phonenumber-field = "^7.0.2"
django-rest-knox = "^4.2.0"
djangorestframework = "^3.14.0"
pipenv = "^2023.3.20"
Django = "^4.2"
Faker = "^18.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
